--- a/README.pod
+++ b/README.pod
@@ -2,7 +2,7 @@
 
 =head1 NAME
 
-MooX::ShortHas - shortcuts for common Moo has attribute configurations
+MooseX::ShortHas - shortcuts for common Moose has attribute configurations
 
 =head1 VERSION
 
@@ -12,7 +12,7 @@ version 1.202040
 
 Instead of:
 
-    use Moo;
+    use Moose;
     
     has hro => is => ro => required => 1;
     has hlazy => is => lazy => builder => sub { 2 };
@@ -21,8 +21,8 @@ Instead of:
 
 You can now write:
 
-    use Moo;
-    use MooX::ShortHas;
+    use Moose;
+    use MooseX::ShortHas;
     
     ro "hro";
     lazy hlazy => sub { 2 };
@@ -35,9 +35,9 @@ And options can be added or overriden by appending them:
 
 =head1 DESCRIPTION
 
-L<Moo>'s C<has> asks developers to repeat themselves a lot to set up attributes,
-and since its inceptions the most common configurations of attributes have
-crystallized through long usage.
+L<Moose>'s C<has> asks developers to repeat themselves a lot to set up
+attributes, and since its inceptions the most common configurations of
+attributes have crystallized through long usage.
 
 This module provides sugar shortcuts that wrap around has under the appropriate
 names to reduce the effort of setting up an attribute to naming it with a
@@ -78,15 +78,15 @@ for the builder option.
 
 =item *
 
-L<Mu> - automatically wraps this module into Moo
+L<Muuse> - automatically wraps this module into Moose
 
 =item *
 
-L<Mu::Role> - automatically wraps this module into Moo::Role
+L<Muuse::Role> - automatically wraps this module into Moose::Role
 
 =item *
 
-L<Mus> - Mu but with slightly more typing and strict constructors
+L<MooX::ShortHas>, L<Mu> - the Moo-related predecessors of this module
 
 =back
 
