--- a/README.pod
+++ b/README.pod
@@ -6,7 +6,7 @@ MooseX::ShortHas - shortcuts for common Moose has attribute configurations
 
 =head1 VERSION
 
-version 1.222490
+version 1.222491
 
 =head1 SYNOPSIS
 
@@ -88,6 +88,11 @@ L<Muuse::Role> - automatically wraps this module into Moose::Role
 
 L<MooX::ShortHas>, L<Mu> - the Moo-related predecessors of this module
 
+=item *
+
+L<MooseX::MungeHas> - a different module for creating your own has on all of
+Moo/Moose/Mouse
+
 =back
 
 =for :stopwords cpan testmatrix url bugtracker rt cpants kwalitee diff irc mailto metadata placeholders metacpan
@@ -115,9 +120,13 @@ Christian Walde <walde.christian@gmail.com>
 
 =head1 CONTRIBUTORS
 
-=for stopwords Graham Knop Zakariyya Mughal mst - Matt S. Trout (cpan:MSTROUT)
+=for stopwords Christian Walde Graham Knop Zakariyya Mughal mst - Matt S. Trout (cpan:MSTROUT)
 
 =over 4
+
+=item *
+
+Christian Walde <walde@united-domains.de>
 
 =item *
 
